@@ -26,6 +26,7 @@ public:
 	virtual unsigned short  min();
 	virtual unsigned short  max();
 	virtual unsigned short  current();
+	virtual unsigned short	backlash();
 	virtual void	set(unsigned short value);
 	double	radius();
 	void	randomposition();	
