@@ -412,6 +412,7 @@ public:
 	virtual unsigned short	min();
 	virtual unsigned short	max();
 	virtual unsigned short	current();
+	virtual unsigned short	backlash();
 	virtual void	set(unsigned short value);
 	bool	moveto(unsigned short value, unsigned long timeout = 60);
 };
