@@ -36,6 +36,10 @@ unsigned short	Focuser::current() {
 	throw NotImplemented("base Focuser does not implement current method");
 }
 
+unsigned short	Focuser::backlash() {
+	return 0;
+}
+
 void	Focuser::set(unsigned short value) {
 	throw NotImplemented("base Focuser does not implement set method");
 }
